Added action to trigger left-right movement on joystick, to play Decathlon-like games
Added new joystick event to exit ZEsarUX
Added Jupiter Ace TAP & TZX support on tape browser
Added TZX support for ID 33 - Hardware type
Added Autorewind tape setting
Added Z80 Halt signal state support on zsf snapshot
Added MSX Joystick emulation
Added Spectravideo Joystick emulation
Added another easter egg ;)


Improved Text Adventure Debugging:
-added Text Adventure Map
-added Locations Connections list
-added direct menu entry and f-function/button to view 8 (adventure debug)
-improved detection of some paws adventures (like superlopez and abracadabra)
-improved detection of some daad adventures (like jabato)

Improved Debug CPU: 
-now it highlights which registers will be modified by the opcode at the cursor position
-added t-states counter on default view
-allow to have a decimal view of opcode decoding using key m (mode)
-added breakpoints actions to start and stop cpu transaction log

Improved Accessibility: 
-added direct settings for inverse colours and gray mode
-added setting to disable Flash

Improved ZX Vision:
-Added maximize window button
-Background button on inactive windows is hidden by default
-Improve window refreshing by disabling autoframeskip while moving
-When sending a window to the background, and the setting "Background windows even when menu closed", the menu will be closed
-Added GUI styles: AmigaOS, Atari TOS, OS/2, RiscOS, ZEsarUX Plus (and this one is now the default style)
-Improve RetroMac GUI style: striped title bar
-Improve BeOS GUI style: buttons positions right after the title
-Detect when video driver can not use the current GUI style and set to another one that can use
-Added translation of menu items to Spanish
-Added shortcuts helper to see hotkeys pressed
-Text windows enlarge/reduce line width when resizing windows
-Text windows wider by default (40 characters instead of 32)