@@ -1282,8 +1282,9 @@ extern int zxdesktop_icon_ide_inverse;
 extern int zxdesktop_icon_zxpand_inverse;
 extern int zxdesktop_icon_mdv_flp_inverse;
 extern int zxdesktop_icon_dandanator_inverse;
+extern int zxdesktop_icon_zxunoflash_inverse;
 
-#define TOTAL_ZXDESKTOP_MAX_LOWER_ICONS 18
+#define TOTAL_ZXDESKTOP_MAX_LOWER_ICONS 19
 
 extern struct s_zxdesktop_lowericons_info zdesktop_lowericons_array[];
 
