@@ -119,6 +119,8 @@ extern char *bitmap_lowericon_ext_desktop_ide_inactive[];
 extern char *bitmap_lowericon_ext_desktop_dandanator_active[];
 extern char *bitmap_lowericon_ext_desktop_dandanator_inactive[];
 
+extern char *bitmap_lowericon_ext_desktop_zxunoflash[];
+
 #define EXT_DESKTOP_TOTAL_BUTTONS 14
 
 #define EXT_DESKTOP_BUTTONS_ANCHO 26
