@@ -14425,6 +14425,7 @@ void delete_generic_footertext(void)
 	zxdesktop_icon_zxpand_inverse=0;
 	zxdesktop_icon_mdv_flp_inverse=0;
     zxdesktop_icon_dandanator_inverse=0;
+    zxdesktop_icon_zxunoflash_inverse=0;
 
 	menu_draw_ext_desktop();
 }
